workspace = { members = ["handle-errors"] }
[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handle-errors = { path = "handle-errors" }
#log = "0.4"
#env_logger = "0.11.5"
#uuid = { version = "1.10.0", feature = ["v4"] }
uuid = { version = "0.8", features = ["v4"] }
#log4rs = "1.3.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "migrate", "postgres"] }